# crypto-options-bot

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.cursor/plans/: delta_india_options_bot_v1_579907cc.plan.md
.github/workflows/: ci.yml  deploy.yml
bot/: __init__.py  __main__.py  app.py  cli.py
bot/analytics/: __init__.py  daily.py  decision_log.py  directional_optimize.py  directional_postmortem.py  journal.py
bot/config/: __init__.py  loader.py  models.py  settings.py
bot/data/: __init__.py  candles.py  chain_cache.py
bot/desk/: __init__.py  greek_sizing.py  greek_snapshot.py  iv_history.py  leg_liquidity.py  pnl_attribution.py  policy.py  portfolio_greeks.py
bot/exchange/: __init__.py  auth.py  rate_limit.py  rest.py  wallet.py  ws.py
bot/execution/: __init__.py  client_id.py  dry.py  live.py  premium.py  reconcile.py  router.py
bot/exits/: __init__.py  engine.py
bot/migrations/: env.py
bot/migrations/versions/: 679436966224_iv_snapshots.py  (+1 more)
bot/observability/: __init__.py  logging_setup.py  metrics.py  server.py  status.py
bot/risk/: __init__.py  caps.py  manager.py  window.py
bot/runtime/: __init__.py  engine.py  go_live.py  iv_prefetch.py  kill_switch.py  nav_state.py  resume.py  trade_tracking.py
bot/storage/: __init__.py  db.py  models.py
bot/strategies/: __init__.py  base.py  credit_vertical.py  directional.py  dispatcher.py  iron_condor.py  long_straddle.py  registry.py  trend_signal.py  vol_strangle.py
config/: global.yaml
config/strategies/: credit_vertical.yaml  directional.yaml  iron_condor.yaml  long_straddle.yaml  vol_strangle.yaml
deploy/: Dockerfile  bootstrap.sh  bot.service  deploy.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-bot.sh  docker-entrypoint.sh  health-check.sh  logrotate.conf  rollback.sh  validate-runtime.sh
tests/: conftest.py  strategy_fixtures.py  test_analyze_open.py  test_auth.py  test_candles.py  test_chain_cache.py  test_config.py  test_daily_aggregator.py  test_decision_log.py  test_desk_policy.py  test_directional_optimize.py  test_directional_postmortem.py  test_execution.py  test_exit_engine.py  test_go_live.py  test_greek_sizing.py  test_greek_snapshot.py  test_iv_history.py  test_iv_prefetch.py  test_journal.py  test_kill_switch.py  test_leg_liquidity.py  test_live_executor.py  test_logging_setup.py  test_nav_state.py  test_observability.py  test_pnl_attribution.py  test_portfolio_greeks.py  test_premium_accounting.py  test_rate_limit.py  test_reconcile.py  test_rest_client.py  test_resume.py  test_risk.py  test_smoke.py  test_storage.py  test_strategy_condor.py  test_strategy_credit_vertical.py  test_strategy_directional.py  test_strategy_interface.py  (+4 more)
