[project]
name = "crypto-options-bot"
version = "0.1.0"
description = "Multi-strategy options trading bot for Delta Exchange India (BTC/ETH)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "yesterdays_rebel" }]

dependencies = [
    "delta-rest-client>=1.0.13",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "apscheduler>=3.10.4",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "freezegun>=1.5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12",
    "pandas-stubs>=2.2.0",
]

[project.scripts]
bot = "bot.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["bot", "tests"]
extend-exclude = ["bot/migrations/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "C4",  # comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF",
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function-call-in-default-argument (typer/FastAPI patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM117"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["bot"]
exclude = ["bot/migrations/versions"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "integration: integration tests that hit live read-only endpoints",
    "slow: tests that take > 1s",
]

[tool.coverage.run]
source = ["bot"]
branch = true
omit = ["bot/__main__.py", "bot/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
